--- a/src/Integration.Vsix.UnitTests/packages.config
+++ b/src/Integration.Vsix.UnitTests/packages.config
@@ -9,9 +9,11 @@
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23205" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Language.Intellisense" version="14.0.23205" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319" targetFramework="net46" />
@@ -25,6 +27,9 @@
   <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50727" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Data" version="14.0.23205" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.Logic" version="14.0.23205" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Text.UI" version="14.0.23205" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50727" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Threading" version="14.1.131" targetFramework="net46" />
