--- a/src/Integration.Vsix.UnitTests/packages.config
+++ b/src/Integration.Vsix.UnitTests/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.3.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="14.0.23205" targetFramework="net46" />
