--- a/src/Integration.Vsix.UnitTests_2017/packages.config
+++ b/src/Integration.Vsix.UnitTests_2017/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.3.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Elfie" version="0.10.6" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
