--- a/src/Integration.UnitTests_2017/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests_2017/Integration.UnitTests.csproj
@@ -21,6 +21,7 @@
     <VsCommonIdeDirectory>$(VSAPPIDDIR)</VsCommonIdeDirectory>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <DisableStrongNamer Condition="'$(SignAssembly)' != 'true'" >true</DisableStrongNamer>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,7 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>$(ReferencedDirectory)\Integration.UnitTests.ruleset</CodeAnalysisRuleSet>
-    <DisableStrongNamer>true</DisableStrongNamer>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
