Update nuget.config for VSTS

--- a/nuget.config
+++ b/nuget.config
@@ -1,18 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
   <config>
     <!-- Used to specify the default location to expand packages. -->
-    <add key="repositorypath" value="packages" />
+    <add key="repositoryPath" value="packages" />
   </config>
-  <packageSources>
-    <add key="SonarSource - QA" value="https://repox.sonarsource.com/api/nuget/sonarsource-nuget-public" />
-  </packageSources>
+
   <packageRestore>
     <!-- Allow NuGet to download missing packages -->
     <add key="enabled" value="True" />
+
     <!-- Automatically check for missing packages during build in Visual Studio -->
     <add key="automatic" value="True" />
   </packageRestore>
+
+  <packageSources>
+    <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
+    <add key="SonarSource - QA" value="https://repox.sonarsource.com/api/nuget/sonarsource-nuget-public" />
+  </packageSources>
+
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
