--- a/SonarQube.Client/SonarQube.Client.csproj
+++ b/SonarQube.Client/SonarQube.Client.csproj
@@ -33,8 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <PackagesRootDir Condition="Exists('../../packages')">../../packages</PackagesRootDir>
-    <PackagesRootDir Condition="!Exists('../../packages')">../packages</PackagesRootDir>
+    <!--
+    This project could be used as a submodule and that's why the packages directory
+    could be in a different location as when it is used in it's own repository.
+    -->
+    <PackagesRootDir Condition="!Exists('../packages')">../../packages</PackagesRootDir>
+    <PackagesRootDir Condition="Exists('../packages')">../packages</PackagesRootDir>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
@@ -52,13 +56,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="**\obj\**\*;**\Protobuf\*" />
-    <!-- Conditionally include shared assembly info and signing in case they are not where we expect them to be -->
-    <Compile Condition="Exists('..\..\src\AssemblyInfo.Shared.cs')" Include="..\..\src\AssemblyInfo.Shared.cs">
-      <Link>Properties\AssemblyInfo.Shared.cs</Link>
-    </Compile>
-    <Compile Condition="Exists('..\..\src\Signing.cs')" Include="..\..\src\Signing.cs">
-      <Link>Properties\Signing.cs</Link>
-    </Compile>
     <!-- Exclude the protobuf-generated files from analysis -->
     <Compile Include="Messages\Protobuf\ScannerInput.cs">
       <SonarQubeExclude>true</SonarQubeExclude>
@@ -72,21 +69,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-
   <!-- Generate protobuf classes, supports Windows, OSX and Linux execution, adapted from SonarAnalyzer.Common -->
   <PropertyGroup>
     <ProtobufOut>./Messages/Protobuf</ProtobufOut>
   </PropertyGroup>
-  <Target Name="GenerateProtobufClasses" BeforeTargets="CoreCompile" Outputs="$(ProtobufOut)/ScannerInput.cs,$(ProtobufOut)/Constants.cs" Inputs="$(ProtobufOut)/scanner_input.proto,$(ProtobufOut)/constants.proto">
+  <Target Name="GenerateProtobufClasses" BeforeTargets="CoreCompile" AfterTargets="RestorePackages" Outputs="$(ProtobufOut)/ScannerInput.cs,$(ProtobufOut)/Constants.cs" Inputs="$(ProtobufOut)/scanner_input.proto,$(ProtobufOut)/constants.proto">
     <Message Importance="high" Text="Generating protobuf classes..." />
-    <!-- There is no built-in way to distinguish between Linux and OSX -->
     <PropertyGroup>
-      <PlatformDir Condition="'$(OS)'=='Windows_NT'">windows_x64</PlatformDir>
-      <!--<PlatformDir Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">macosx_x64</PlatformDir>
-      <PlatformDir Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">linux_x64</PlatformDir>-->
-    </PropertyGroup>
-    <PropertyGroup>
-      <ProtocCompiler>"$(PackagesRootDir)/Grpc.Tools.1.4.1/tools/$(PlatformDir)/protoc.exe"</ProtocCompiler>
+      <ProtocCompiler>"$(PackagesRootDir)/Grpc.Tools.1.4.1/tools/windows_x64/protoc.exe"</ProtocCompiler>
     </PropertyGroup>
     <Exec Command="$(ProtocCompiler) -I=$(ProtobufOut) --csharp_out=$(ProtobufOut) $(ProtobufOut)/scanner_input.proto" />
     <Exec Command="$(ProtocCompiler) -I=$(ProtobufOut) --csharp_out=$(ProtobufOut) $(ProtobufOut)/constants.proto" />
