--- a/SonarQube.Client/SonarQube.Client.csproj
+++ b/SonarQube.Client/SonarQube.Client.csproj
@@ -1,86 +1,52 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E513FC3-BDA7-40F2-8B6A-1BB9372ACB99}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SonarQube.Client</RootNamespace>
+    <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
     <AssemblyName>SonarQube.Client</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
     <LangVersion>6</LangVersion>
+    <RootNamespace>SonarQube.Client</RootNamespace>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-  <PropertyGroup>
-    <!--
-    This project could be used as a submodule and that's why the packages directory
-    could be in a different location as when it is used in it's own repository.
-    -->
-    <PackagesRootDir Condition="!Exists('../packages')">../../packages</PackagesRootDir>
-    <PackagesRootDir Condition="Exists('../packages')">../packages</PackagesRootDir>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Google.Protobuf, Version=3.6.1.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
-      <HintPath>$(PackagesRootDir)\Google.Protobuf.3.6.1\lib\net45\Google.Protobuf.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>$(PackagesRootDir)\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Google.Protobuf" Version="3.6.1" />
+    <!-- When changing this reference update ProtocCompiler property too! -->
+    <PackageReference Include="Grpc.Tools" Version="1.4.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
+
+  <!-- Exclude the protobuf-generated files from analysis -->
   <ItemGroup>
-    <Compile Include="**\*.cs" Exclude="**\obj\**\*;**\Protobuf\*" />
-    <!-- Exclude the protobuf-generated files from analysis -->
-    <Compile Include="Messages\Protobuf\ScannerInput.cs">
-      <SonarQubeExclude>true</SonarQubeExclude>
+    <Compile Remove="Messages/Protobuf/ScannerInput.cs" />
+    <Compile Include="Messages/Protobuf/ScannerInput.cs">
+        <SonarQubeExclude>true</SonarQubeExclude>
     </Compile>
-    <Compile Include="Messages\Protobuf\Constants.cs">
+    <Compile Remove="Messages/Protobuf/Constants.cs" />
+    <Compile Include="Messages/Protobuf/Constants.cs">
       <SonarQubeExclude>true</SonarQubeExclude>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- Generate protobuf classes, supports Windows, OSX and Linux execution, adapted from SonarAnalyzer.Common -->
-  <PropertyGroup>
-    <ProtobufOut>./Messages/Protobuf</ProtobufOut>
-  </PropertyGroup>
-  <Target Name="GenerateProtobufClasses" BeforeTargets="CoreCompile" AfterTargets="RestorePackages" Outputs="$(ProtobufOut)/ScannerInput.cs,$(ProtobufOut)/Constants.cs" Inputs="$(ProtobufOut)/scanner_input.proto,$(ProtobufOut)/constants.proto">
+
+  <!-- Generate protobuf classes, only supports Windows execution, adapted from SonarAnalyzer.Common -->
+  <Target Name="GenerateProtobufClasses" BeforeTargets="CoreCompile" AfterTargets="RestorePackages" Outputs="Messages/Protobuf/ScannerInput.cs,Messages/Protobuf/Constants.cs" Inputs="Messages/Protobuf/scanner_input.proto,Messages/Protobuf/constants.proto">
     <Message Importance="high" Text="Generating protobuf classes..." />
     <PropertyGroup>
-      <ProtocCompiler>"$(PackagesRootDir)/Grpc.Tools.1.4.1/tools/windows_x64/protoc.exe"</ProtocCompiler>
+      <ProtocCompiler>"$(UserProfile)/.nuget/packages/Grpc.Tools/1.4.1/tools/windows_x64/protoc.exe"</ProtocCompiler>
     </PropertyGroup>
-    <Exec Command="$(ProtocCompiler) -I=$(ProtobufOut) --csharp_out=$(ProtobufOut) $(ProtobufOut)/scanner_input.proto" />
-    <Exec Command="$(ProtocCompiler) -I=$(ProtobufOut) --csharp_out=$(ProtobufOut) $(ProtobufOut)/constants.proto" />
+    <Exec WorkingDirectory="Messages/Protobuf" Command="$(ProtocCompiler) -I=. --csharp_out=. ./scanner_input.proto" />
+    <Exec WorkingDirectory="Messages/Protobuf" Command="$(ProtocCompiler) -I=. --csharp_out=. ./constants.proto" />
     <Message Importance="high" Text="Protobuf classes generated." />
   </Target>
+
 </Project>
