Changed projects to use $(DevEnvDir) property to locate VS

--- a/src/Integration.UnitTests_2017/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests_2017/Integration.UnitTests.csproj
@@ -18,7 +18,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <TargetFrameworkProfile />
     <ReferencedDirectory>..\Integration.UnitTests</ReferencedDirectory>
-    <VsCommonIdeDirectory>$(VSAPPIDDIR)</VsCommonIdeDirectory>
+    <VsCommonIdeDirectory>$(DevEnvDir)</VsCommonIdeDirectory>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <DisableStrongNamer Condition="'$(SignAssembly)' != 'true'">true</DisableStrongNamer>
